compiler/tests/fixtures/invalid/semantics/assignment_in_non_action.viv
// Invalid: assignment in non-action construct

action fight:
    roles:
        @fighter:
            as: initiator

query bad-assign:
    roles:
        @witness:
            as: character
    conditions:
        @witness.alerted = true
    action:
        any: fight
